<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CyberPlink</string>
    <string name="gender">Gender (M or F)</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_text">Hi and welcome to our game</string>
    <string name="welcome_title" align="center">Welcome</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_name">User Name</string>
    <string name="user_password_confirmation">Confirm Password</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="register_disclaimer">By clicking on Register you are agreeing to terms of service</string>
    <string name="hello_world">Hello world!</string>
    <string name="char_build">Create Character</string>
    <string name="battle">In order to fight someone, you have\nto select View Players from the Main-\nMenu and then choose your opponent</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_character_build">CharacterBuild</string>
    <string name="title_activity_battle">Battle</string>
    <string name="title_activity_quest">Quest</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_home">Welcome</string>
    <string name="title_activity_view_gang">ViewGang</string>
    <string name="title_activity_battle_info">BattleInfo</string>
    <string name="char_name">Character Name</string>
    <string name="title_activity_character_stats_initialize">CharacterStatsInitialize</string>
    <string name="title_activity_character_stats_add">CharacterStatsAdd</string>

    <color name="text_color">#984949</color>

    <string name="log_out">Log out</string>
    <string name="world_map">World Map</string>
    <string name="game_stats">View Stats</string>
    <string name="view_players">View Players</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_gangs">View Gangs</string>
    <string name="title_activity_view_players">ViewPlayers</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="inbox">Inbox</string>
    <string name="compose">Compose</string>
    <string name="title_activity_compose">PrivateMessage</string>
    <string name="email">To</string>
	<string name="compose_message">Compose message</string>
	<string name="send">Send</string>
	<string name="title_opp_stats">Statistics</string>
	<string name="title_activity_battle_result">Battle Result</string>
</resources>