<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battlebackground" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right"
        android:padding="15dp" >

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:layout_height="45dp"
            android:background="@drawable/edittext_bg"
            android:layout_weight="1"
            android:ems="10"
            android:textColorHint="@android:color/white"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress" >
            <requestFocus android:layout_width="wrap_content" />
        </EditText>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:layout_height="45dp"
            android:background="@drawable/edittext_bg"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_name"
            android:textColorHint="@android:color/white"
            android:inputType="text" />

        <EditText
            android:id="@+id/userPassword"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_bg"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_password"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/userPasswordConfirmation"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_bg"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_password_confirmation"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword" />

        <TextView
            android:background="#4000"
            android:id="@+id/registerDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textColor="#ecebe9"
            android:text="@string/register_disclaimer"
            android:textAppearance="?android:attr/textAppearanceSmall" />        

        <Button
            android:id="@+id/registerButton"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textStyle="bold"
            
            android:textColor="#fff"
            android:onClick="registerNewAccount"
            android:background="@drawable/whiteblack"
            android:text="@string/register" />
    </LinearLayout>

</ScrollView>