<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:background="@drawable/cyberpunk"
    android:orientation="vertical"
    android:padding="15dp"
    >

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/welcome_title"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcomeTitle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:background="@drawable/whiteblack"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@drawable/whiteblack"
            android:text="@string/register"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>