<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/charbuild"
    tools:context=".CharacterBuild" >

    <Button
        android:id="@+id/questMain"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:background="@drawable/buttonselector"
        android:text="Proceed"
        android:textColor="@android:color/white" />
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/textboxbac"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:ems="10"
        android:paddingLeft="7dp"
        android:textColor="@android:color/white"
        android:hint="@string/gender"
        android:textColorHint="@android:color/white" />
    <EditText
        android:id="@+id/editText1"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/textboxbac"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="36dp"
        android:paddingLeft="7dp"        
        android:ems="10"
        android:hint="@string/char_name" 
        android:textColorHint="@android:color/white"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/char_build"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/addPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/questMain"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:background="@drawable/unknown2"
        android:contentDescription="Choose Picture"
        android:src="@drawable/unknown2"
        android:textColor="@android:color/white" />

</RelativeLayout>